--- a/lectio/mateo.html
+++ b/lectio/mateo.html
@@ -202,158 +202,160 @@ Sí, puedo proporcionarte un resumen de los comentarios sobre Mateo 1:1-17 de al
 
 </p>
 <!-- /////////////////////////////////////// -->
-<pre>
- Comentarios Patrísticos
 
-1. Catena Aurea de Santo Tomás de Aquino
-   - La Catena Aurea, una recopilación de comentarios de los Padres de la Iglesia, ofrece interpretaciones patrísticas sobre este pasaje. San Jerónimo, por ejemplo, observa la inclusión de mujeres con antecedentes controversiales como una indicación de que Jesús vino a redimir a todos, sin importar su pasado.
+<h3>Comentarios Patrísticos</h3>
+<p>
 
-2. "The Gospel of Matthew" de R.T. France (comentario patrístico)
-   - France, aunque no específicamente un autor católico, es apreciado por su uso de fuentes patrísticas. En su comentario sobre Mateo 1:1-17, señala cómo los Padres de la Iglesia vieron la genealogía como una validación de la humanidad y divinidad de Jesús.
+1<br> Catena Aurea de Santo Tomás de Aquino <br>
+   - La Catena Aurea, una recopilación de comentarios de los Padres de la Iglesia, ofrece interpretaciones patrísticas sobre este pasaje<br> San Jerónimo, por ejemplo, observa la inclusión de mujeres con antecedentes controversiales como una indicación de que Jesús vino a redimir a todos, sin importar su pasado<br><br><br>
 
- Reflexiones y Observaciones Generales
+2<br> "The Gospel of Matthew" de R.T<br> France (comentario patrístico)
+   - France, aunque no específicamente un autor católico, es apreciado por su uso de fuentes patrísticas<br> En su comentario sobre Mateo 1:1-17, señala cómo los Padres de la Iglesia vieron la genealogía como una validación de la humanidad y divinidad de Jesús<br><br><br>
 
-- La estructura de la genealogía: La organización en tres grupos de catorce generaciones se ve como un diseño literario que resalta la providencia divina en la historia de la salvación.
-- Inclusión de mujeres y figuras no judías: La inclusión de mujeres y gentiles en la genealogía es vista como un anticipo de la universalidad del Evangelio.
-- La conexión con la historia de Israel: La genealogía sitúa a Jesús firmemente dentro de la historia de Israel, mostrando que es el cumplimiento de las promesas hechas a los patriarcas y a la casa de David.
+ Reflexiones y Observaciones Generales<br><br>
 
-Estos comentarios subrayan cómo la genealogía en Mateo 1:1-17 no es simplemente una lista de nombres, sino una declaración teológica profunda sobre la identidad y misión de Jesús.
+- La estructura de la genealogía: La organización en tres grupos de catorce generaciones se ve como un diseño literario que resalta la providencia divina en la historia de la salvación<br><br>
+- Inclusión de mujeres y figuras no judías: La inclusión de mujeres y gentiles en la genealogía es vista como un anticipo de la universalidad del Evangelio<br>
+- La conexión con la historia de Israel: La genealogía sitúa a Jesús firmemente dentro de la historia de Israel, mostrando que es el cumplimiento de las promesas hechas a los patriarcas y a la casa de David<br>
+
+Estos comentarios subrayan cómo la genealogía en Mateo 1:1-17 no es simplemente una lista de nombres, sino una declaración teológica profunda sobre la identidad y misión de Jesús<br><br>
 
 
 
-E-SWORD
-Mateo quiere transmitir esperanza, y que esté basada en la fe. La seguridad de que Jesús es el Mesías.
+E-SWORD<br>
+Mateo quiere transmitir esperanza, y que esté basada en la fe<br> La seguridad de que Jesús es el Mesías<br>
 De que Dios incluye en la salvación a los excluidos, sea por no ser parte del pueblo judío, o por ser considerados así
-por la ley o las tradiciones.
+por la ley o las tradiciones<br>
 
-Mateo es sensible a esta realidad, que él también la vive. Habla desde su experiencia personal con la realidad y con
-Dios.
-Afirma que en Él se cumplen las Escrituras, por eso las abundantes citas.
-Asegurando que Jesús ha venido por los excluidos, donde él se incluye Mt 9,9-13. Lo veremos en este texto en 1,3.5.6
+Mateo es sensible a esta realidad, que él también la vive<br> Habla desde su experiencia personal con la realidad y con
+Dios<br>
+Afirma que en Él se cumplen las Escrituras, por eso las abundantes citas<br>
+Asegurando que Jesús ha venido por los excluidos, donde él se incluye Mt 9,9-13<br> Lo veremos en este texto en 1,3.5.6
 donde menciona a cuatro mujeres extranjeras, no pertenecían al pueblo de Dios, y además junto con María en una situación
-irregular.
-Las profecías que se tenían presentes en la mente del pueblo y que Mateo afirma su cumplimiento son:
-Es el profeta anunciado por Moisés, maestro y legislador.
-Deu 18:18 Yo haré que se levante de en medio de sus hermanos un profeta, lo mismo que hice contigo. Yo pondré mis
-palabras en su boca y él les dirá todo lo que yo mande.
-Deu 18:19 Si alguno no escucha mis palabras, cuando habla el profeta de parte mía, yo mismo le pediré cuentas.
- Por eso es presentado en la mayoría de capítulos como el nuevo Moisés que trae la definitiva ley.
- Es el Hijo de David
-Por eso Mateo desarrollará la idea de rey, reino y reinado.
- El anuncio de que está cerca el reino de los cielos
- La entrada del domingo de ramos
- El dialogo con Pilatos
- La coronación de espinas
- El titulo sobre la cruz
+irregular<br>
+Las profecías que se tenían presentes en la mente del pueblo y que Mateo afirma su cumplimiento son:<br>
+Es el profeta anunciado por Moisés, maestro y legislador<br>
+Deu 18:18 Yo haré que se levante de en medio de sus hermanos un profeta, lo mismo que hice contigo<br> Yo pondré mis
+palabras en su boca y él les dirá todo lo que yo mande<br>
+Deu 18:19 Si alguno no escucha mis palabras, cuando habla el profeta de parte mía, yo mismo le pediré cuentas<br>
+ Por eso es presentado en la mayoría de capítulos como el nuevo Moisés que trae la definitiva ley<br><br>
+ Es el Hijo de David<br>
+Por eso Mateo desarrollará la idea de rey, reino y reinado<br><br>
+_ El anuncio de que está cerca el reino de los cielos<br>
+_ La entrada del domingo de ramos<br>
+_ El dialogo con Pilatos<br>
+_ La coronación de espinas<br>
+_ El titulo sobre la cruz<br><br>
 
 Es el hijo de Abraham
 o En quien se realiza las promesas del Génesis:
 o
 Gén 12:1 Yahweh dijo a Abram: “Deja tu país, a los de tu raza y a la familia de tu padre, y anda a la tierra que yo te
-mostraré.
-Gén 12:2 Haré de ti una gran nación y te bendeciré; voy a engrandecer tu nombre, y tú serás una bendición.
-Gén 12:3 Bendeciré a quienes te bendigan y maldeciré a quienes te maldigan. En ti serán bendecidas todas las razas de la
-tierra.”
+mostraré<br>
+Gén 12:2 Haré de ti una gran nación y te bendeciré; voy a engrandecer tu nombre, y tú serás una bendición<br>
+Gén 12:3 Bendeciré a quienes te bendigan y maldeciré a quienes te maldigan<br> En ti serán bendecidas todas las razas de la
+tierra<br>”
 o Citadas también por el apóstol Pablo en Rom 4,1-12 y Gal 3,7-9
 
-Mat 28:19 Vayan, pues, y consíganme discípulos de todas las naciones. Bauticenlos en el Nombre del Padre y del Hijo y
+Mat 28:19 Vayan, pues, y consíganme discípulos de todas las naciones<br> Bauticenlos en el Nombre del Padre y del Hijo y
 del Espíritu Santo,
 
-Mat 28:20 y enséñenles a cumplir todo lo que yo les he encomendado a ustedes. Yo estoy con ustedes todos los días hasta
-el fin de la historia.”
+Mat 28:20 y enséñenles a cumplir todo lo que yo les he encomendado a ustedes<br> Yo estoy con ustedes todos los días hasta
+el fin de la historia<br>”
 
 CUÁL ES EL MENSAJE QUE TRANSMITIÓ EL SEÑOR
 Recordemos Que es evangelio es decir una Buena Nueva, algo que necesitan los oyentes en ese momento específico, una
-Buena Noticia.
+Buena Noticia<br>
 
 Estas palabras de hombre fueron reconocidas como Palabra de Dios, transmitieron fe y esperanza a la comunidad, y sobre
-todo la certeza de la presencia de Dios.
+todo la certeza de la presencia de Dios<br>
 
  La convicción de que estaban en lo correcto: Jesús era el Mesías esperado, por eso deberían perseverar en su
-propuesta.
+propuesta<br>
  Que nadie estaba excluido del Pueblo de Dios, ni los llamados pecadores ni los extranjeros por eso deberían acogerlos
-como hermanos.
- Que las Escrituras se leen desde la fe en Jesús. Por ello se releerían las Escrituras desde el Espíritu de Cristo.
+como hermanos<br>
+ Que las Escrituras se leen desde la fe en Jesús<br> Por ello se releerían las Escrituras desde el Espíritu de Cristo<br>
 
 Quiere comunicar la fe en Cristo, presentarlo desde la experiencia judía, resaltar la novedad del evangelio y hacerla
-vida en esas condiciones concretas.
+vida en esas condiciones concretas<br>
 
-
+</p>
+<pre>
  MEDITATIO ¿QUÉ ME DICE EL SEÑOR?
-.1 Cuál era la relación Realidad-Mensaje
-El mensaje era una respuesta, una orientación a la situación vivida en ese momento por el pueblo.
+<br>1 Cuál era la relación Realidad-Mensaje
+El mensaje era una respuesta, una orientación a la situación vivida en ese momento por el pueblo<br>
  Perseverar en la propuesta del Señor, Mt 28,19-20
- El espíritu de unidad con todas las personas. Mt 20,26-28
- Se lee y vive desde la fe en Jesús. Mt 15,7
+ El espíritu de unidad con todas las personas<br> Mt 20,26-28
+ Se lee y vive desde la fe en Jesús<br> Mt 15,7
 
-.2 Y la relación realidad-mensaje-Cristificación
+<br>2 Y la relación realidad-mensaje-Cristificación
 Estas propuestas, unidas a la sincera apertura al cambio, convertían el espíritu humano, al transformar la praxis
-personal, las relaciones interpersonales, y la orientación y sentido de las mismas.
- Cristo en mi persona, iniciando mi conversión al Señor encarnando el mensaje.
- Cristo en la iglesia, construyendo vínculos de unidad fraterna entre todas las personas.
- Cristo en la realidad, el Señor santificando todas las actividades y realidades, en este caso la lectura de la ley.
+personal, las relaciones interpersonales, y la orientación y sentido de las mismas<br>
+ Cristo en mi persona, iniciando mi conversión al Señor encarnando el mensaje<br>
+ Cristo en la iglesia, construyendo vínculos de unidad fraterna entre todas las personas<br>
+ Cristo en la realidad, el Señor santificando todas las actividades y realidades, en este caso la lectura de la ley<br>
 
 
-.3 Qué similitud hay entre la realidad humano-personal de los destinatarios bíblicos y nosotros hoy
+<br>3 Qué similitud hay entre la realidad humano-personal de los destinatarios bíblicos y nosotros hoy
 
- Tenemos el mismo problema de duda que en nuestro caso se agrava con la incoherencia.
- No reconozco a Cristo en toda persona, los veo desde mis categorías y necesidades.
- En los trabajos y acciones la presencia del Señor está ausente, no lo asumo como medio de recreación y santificación.
+ Tenemos el mismo problema de duda que en nuestro caso se agrava con la incoherencia<br>
+ No reconozco a Cristo en toda persona, los veo desde mis categorías y necesidades<br>
+ En los trabajos y acciones la presencia del Señor está ausente, no lo asumo como medio de recreación y santificación<br>
 
-4. Que me dice a mí y a nosotros
- Necesito pasar del conocimiento a la experiencia vital del Señor destinando momentos concretos para la oración.
-Trabajar conscientemente por la unidad en mí, buscando primero ordenarme y ordenar todo lo hasta aquí aprendido.
- Compartir lo que necesita cada hermano, ayudarlo a crecer, y crecer con él, conocerlo mejor.
+4<br> Que me dice a mí y a nosotros
+ Necesito pasar del conocimiento a la experiencia vital del Señor destinando momentos concretos para la oración<br>
+Trabajar conscientemente por la unidad en mí, buscando primero ordenarme y ordenar todo lo hasta aquí aprendido<br>
+ Compartir lo que necesita cada hermano, ayudarlo a crecer, y crecer con él, conocerlo mejor<br>
  Concretar postulados fundamentales y tenerlos presente diariamente a través de un rezo, símbolo y oración
 
  ORATIO ¿QUÉ RESPONDO AL SEÑOR?
-.1 Cuáles han sido las respuestas a través de la historia a la misma invitación
-Los monjes destinaron toda su vida a la oración. Los mendicantes al amor expresado en servicio, y muchos santos a la
-santificación en las cosas de la vida diaria.
-.2 Como responden hoy los hombres desde la fe
-Veo el apego sincero a practicas como asistir a misa, el santísimo, y devociones santas. En ellas tratan de unir la
+<br>1 Cuáles han sido las respuestas a través de la historia a la misma invitación
+Los monjes destinaron toda su vida a la oración<br> Los mendicantes al amor expresado en servicio, y muchos santos a la
+santificación en las cosas de la vida diaria<br>
+<br>2 Como responden hoy los hombres desde la fe
+Veo el apego sincero a practicas como asistir a misa, el santísimo, y devociones santas<br> En ellas tratan de unir la
 presencia del Señor en su persona, cierto aprecio cristiano por los demás y reconocen que Dios está en muchas
-actividades.
-.3 Y cómo responden las personas desde su experiencia personal
-Se trata de satisfacer la trascendencia con la identificación con una institución, con un personaje público, un ideal.
-Se valora a la persona en función de sus conceptos, la realidad es el medio y solo eso.
-.4 Cómo responden mis próximos desde la fe
-Estar bien con Dios, para obtener la felicidad como premio. Tratar de amar a aquellos que me es posible y ser
-indiferente con los que me caen mal. Tratar de hacer bien las cosas, como un sentido de responsabilidad,
-.5 Y cómo desde su experiencia personal
+actividades<br>
+<br>3 Y cómo responden las personas desde su experiencia personal
+Se trata de satisfacer la trascendencia con la identificación con una institución, con un personaje público, un ideal<br>
+Se valora a la persona en función de sus conceptos, la realidad es el medio y solo eso<br>
+<br>4 Cómo responden mis próximos desde la fe
+Estar bien con Dios, para obtener la felicidad como premio<br> Tratar de amar a aquellos que me es posible y ser
+indiferente con los que me caen mal<br> Tratar de hacer bien las cosas, como un sentido de responsabilidad,
+<br>5 Y cómo desde su experiencia personal
 Decepcionados del dios que se les presenta, buscan la trascendencia en ser buenos padres, buenos amigos, buenos
-trabajadores.
-.6 Que respondo personalmente y en mi comunidad
-a. Necesito tiempo diario y estable para estar con el Señor de manera especial.
-b. Descubrir a Dios en mi prójimo y también la acción que el Señor quiere que haga con ellos y por ellos.
-c. Buscar los principios filosóficos y cristianos que determinan el objetivo y procedimiento en las acciones, así como
-sus implicancias psicológicas.
+trabajadores<br>
+<br>6 Que respondo personalmente y en mi comunidad
+a<br> Necesito tiempo diario y estable para estar con el Señor de manera especial<br>
+b<br> Descubrir a Dios en mi prójimo y también la acción que el Señor quiere que haga con ellos y por ellos<br>
+c<br> Buscar los principios filosóficos y cristianos que determinan el objetivo y procedimiento en las acciones, así como
+sus implicancias psicológicas<br>
 
  CONTEMPLATIO ¿QUÉ ME MUESTRA EL SEÑOR DE SÍ?
-.1 Cómo actúa el Señor
+<br>1 Cómo actúa el Señor
 a. Siempre parte desde las circunstancias concretas
 b. El objeto es cristificar al ser humano
-c. Que sea un acto libre y consiente. Amén de solidario.
+c. Que sea un acto libre y consiente<br> Amén de solidario<br>
 
-.2 En Qué circunstancias
-Espera aquellas donde la persona tiene apertura, disposición, y verdadero deseo.
-.3 Cuál sería la finalidad
-a. Cristificar a la persona
-b. Que esto sea útil a los demás en su propio proceso
-c. Crecer en unidad con Dios y la humanidad de todos los tiempos
-.4 Cuál es la invitación de conversión que me hace
+<br>2 En Qué circunstancias
+Espera aquellas donde la persona tiene apertura, disposición, y verdadero deseo<br>
+.3 Cuál sería la finalidad<br>
+a. Cristificar a la persona<br>
+b. Que esto sea útil a los demás en su propio proceso<br>
+c. Crecer en unidad con Dios y la humanidad de todos los tiempos<br>
+<br>4 Cuál es la invitación de conversión que me hace
 Cada persona es importante, cada labor es importante, dedicar un tiempo a personas concretas y labores concretas
-.5 ¿Cuál sería el cambio de mi pensamiento, porque no soy así?
-Orden, disciplina y criterio.
-.6 Se armoniza con lo anteriormente contemplado
-Si.
-.7 Que experiencias recojo de esta lectio para una mejor comprensión de los textos
+<br>5 ¿Cuál sería el cambio de mi pensamiento, porque no soy así?
+Orden, disciplina y criterio<br>
+<br>6 Se armoniza con lo anteriormente contemplado
+Si<br>
+<br>7 Que experiencias recojo de esta lectio para una mejor comprensión de los textos
 Colocarse en el lugar de los oyentes primeros
-.8 Cómo se proyecta a la vida
+<br>8 Cómo se proyecta a la vida
 Siempre ponerse en el lugar del otro
-.9 Cómo aplicarlo a todas mis realidades
+<br>9 Cómo aplicarlo a todas mis realidades
 Buscar la perspectiva correcta
-.10 Cuáles son los pasos
+<br>10 Cuáles son los pasos
 a. Buscar el momento adecuado, donde halla apertura e interés.
 b. Tener en cuenta las circunstancias concretas. Necesidades urgentes y criterios personales
 c. Descubrir el plan de Dios en esa persona y seguirlo
