--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -30,7 +30,7 @@
           <li class="li"><a href="../lectio/intro.html">LECTIO DIVINA</a></li>
           <li class="li"><a href="../oracion/oracion.html">ORACIÓN</a></li>
           <li class="li"><a href="../lectio/intro.">LITURGIA</a></li>
-          <li class="li"><a href="../lectio/intro.">ORDEN CARMELITA SEGLAR</a></li>
+          <li class="li"><a href="../noviciado/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
         
         </ol>
        
