--- a/oracion/oracion.html
+++ b/oracion/oracion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>NOVICIADO</title>
+    <title>ORACION</title>
   </head>
 
   <body>
@@ -31,8 +31,8 @@
          <H2>ENLACES A TEMAS</H2>
          <ol>
            <li class="li"><a href="../oracion/rosario.html">ROSARIO</a></li>
-           <li class="li"><a href="../">LAS MORADAS</a></li>
-           <li class="li"><a href="../lectio/apocalipsis.">CAMINO DE PERFECCIÓN</a></li>
+           <li class="li"><a href="../oracion/CastilloInterior.html">LAS MORADAS</a></li>
+           <li class="li"><a href="../">CAMINO DE PERFECCIÓN</a></li>
           </ol>
         </div>
       </section>
