--- a/euangelium/maria.html
+++ b/euangelium/maria.html
@@ -26,25 +26,25 @@
 
     <OL>
 
-        <li><a href="#INTRO">1 INTRODUCCIÓN </a> </li>
-        <li><a href="#QUIEN_ES">2 QUIÉN ES MARÍA </a> </li>
+        <li><a href="#INTRO">INTRODUCCIÓN </a> </li>
+        <li><a href="#QUIEN_ES">QUIÉN ES MARÍA </a> </li>
         <li> EN EL GÉNESIS </li>
         <li> ENTENDER A CABALIDAD QUE ES UNA SEÑAL </li>
         <li> EN LOS EVANGELIOS </li>
         <li> Existe un paralelo entre la caída y la cruz </li>
         <li> EN EL APOCALIPSIS </li>
-        <li><a href="#DOGMAS">3. LOS DOGMAS MARIANOS </a> </li>
+        <li><a href="#dogmas">LOS DOGMAS MARIANOS </a> </li>
         <li> LA MATERNIDAD DIVINA </li>
         <li> LA VIRGINIDAD PERPETUA </li>
         <li> LA INMACULADA CONCEPCIÓN </li>
-        <li> LA ASUNCIÓN 16 </li>
-        <li><a href="$APOL"></a> 4. APOLOGÉTICA </li>
+        <li> LA ASUNCIÓN </li>
+        <li><a href="$APOL">APOLOGÉTICA</a></li>
         <li> a. HASTA QUE </li>
         <li> b. PRIMOGÉNITO </li>
         <li> c. EL CELIBATO. </li>
         <li> d. LOS HERMANOS DE JESÚS </li>
         <li> UN ÁNGEL ANUCIA </li>
-        <li> ADELFOS – AJ- AJOT </li>
+        <li> ADELFOS & AJ- AJOT </li>
         <li> Tío-sobrino </li>
         <li> Primos </li>
         <li> De la misma tribu </li>
@@ -660,7 +660,7 @@
     <br>
     <br>
 
-    <h2 id="DOGMAS">3. LOS DOGMAS MARIANOS</h2> <br>
+    <h2 id="dogmas">LOS DOGMAS MARIANOS</h2> <br>
     LA MATERNIDAD DIVINA <br>
     Es primero preciso reconocer que Jesús es Verdadero Dios y verdadero Hombre. Es la llamada unión hipostática.
     <br>
@@ -680,9 +680,7 @@
     <br>
     igual que nosotros, a excepción del pecado. <br>
     <br>
-    UN ejemplo, un alcalde es un título que no se lo da su madre, pero es correcto decir que tal persona es madre
-    <br>
-    del alcalde. <br>
+    UN ejemplo, un alcalde es un título que no se lo da su madre, pero es correcto decir que tal persona es madre<br> del alcalde. <br>
     Los españoles cantaban una canción que decía <br>
     Si quiso y no pudo; no es Dios <br>
     Si pudo y no quiso; no es hijo <br>
@@ -693,6 +691,22 @@
     Ella es la nueva Eva. Toda llena de gracia, como Eva antes del pecado. <br>
     LA ASUNCIÓN <br>
     La paga del pecado es la muerte. Morir es consecuencia del pecado. <br>
+    Este dogma fue proclamado oficialmente por el Papa Pío XII el 1 de noviembre de 1950, en la constitución apostólica Munificentissimus Deus.<br><br>
+La Asunción de María es vista como una anticipación de lo que se promete a todos los cristianos: la resurrección y la vida eterna. Al ser asunta al cielo, María se convierte en un signo de esperanza y un modelo de lo que nos espera al final de los tiempos. <br><br>
+
+Enoc<br>
+Génesis 5:24:<br>
+"Caminó, pues, Enoc con Dios, y desapareció, porque Dios se lo llevó."<br><br>
+
+Hebreos 11:5:<br>
+"Por la fe Enoc fue trasladado al cielo para que no viera la muerte, y no fue hallado, porque Dios lo trasladó. Antes de ser trasladado, recibió testimonio de haber agradado a Dios."<br><br>
+
+Elías<br>
+2 Reyes 2:11:<br>
+"Y aconteció que yendo ellos y hablando, he aquí un carro de fuego con caballos de fuego apartó a los dos; y Elías subió al cielo en un torbellino."
+
+
+    <br>
     <br>
     <br>
     <h2 id="APOL">4. APOLOGÉTICA</h2> <br>
