--- a/oracion/CastilloInterior.html
+++ b/oracion/CastilloInterior.html
@@ -149,9 +149,9 @@
             Lucha contra el Pecado:   Discutir los tipos de tentaciones y distracciones que enfrentamos y estrategias para vencerlas<br>
             Importancia de la Oración:   Insistir en la necesidad de establecer una práctica regular de oración y sus beneficios en la vida espiritual<br>
             Reconocimiento del Pecado:   Cómo el reconocimiento de nuestras imperfecciones es el primer paso hacia la purificación y el crecimiento espiritual<br>
-            Atracción hacia Dios :   Explorar el deseo interno de conocer y amar a Dios más profundamente<br>
-     
-        Conceptos Clave para la Primera Morada <br>
+            Atracción hacia Dios :   Explorar el deseo interno de conocer y amar a Dios más profundamente<br><br>
+
+        <b><i>Conceptos Clave para la Primera Morada </i></b><br>
             Conversión:   El primer paso hacia una vida espiritual más profunda<br>
             Oración:   La herramienta fundamental para el crecimiento espiritual<br>
             Lucha Espiritual:   La batalla constante contra las distracciones y el pecado<br>
