--- a/oracion/oracion.html
+++ b/oracion/oracion.html
@@ -33,6 +33,7 @@
            <li class="li"><a href="../oracion/rosario.html">ROSARIO</a></li>
            <li class="li"><a href="../oracion/CastilloInterior.html">LAS MORADAS</a></li>
            <li class="li"><a href="../">CAMINO DE PERFECCIÓN</a></li>
+           <li class="li"><a href="../">ORACIÓN</a></li>
           </ol>
         </div>
       </section>
