--- a/oracion/CastilloInterior.html
+++ b/oracion/CastilloInterior.html
@@ -160,34 +160,35 @@
      
      </p>
      <h3>PARA LA OSC-PUCUSANA</h3>
-     <pre>
-      Lectura de la 1ERA MORADA de Santa teresa de Jesús
+     <p>
+      Lectura de la 1ERA MORADA de Santa teresa de Jesús <br><br>
 
 La metáfora: El alma es como un castillo con muchas moradas
-Primera Morada: El punto de partida del viaje espiritual hacia Dios
+Primera Morada: El punto de partida del viaje espiritual hacia Dios<br><br>
 
-Tema: 
-	Conversión inicial y entrada en la vida espiritual
-La Oración 
-Jr. 29,12-13 Cuando me invoquen y vengan a suplicarme, yo los escucharé, cuando me busquen me encontraran, siempre que lo hagan de todo corazón.
+Tema: <br>
+	Conversión inicial y entrada en la vida espiritual<br>
+La Oración <br>
+Jr. 29,12-13 Cuando me invoquen y vengan a suplicarme, yo los escucharé, cuando me busquen me encontraran, siempre que lo hagan de todo corazón.<br><br>
 
-	El alma se adentra en el castillo por primera vez
-o	El silencio 
-"A Dios hablamos cuando oramos y escuchamos cuando leemos su palabra" San Ambrosio de Milán
+	El alma se adentra en el castillo por primera vez<br>
+o	El silencio <br><br>
+"A Dios hablamos cuando oramos y escuchamos cuando leemos su palabra" San Ambrosio de Milán<br><br>
 
-	Lucha contra el pecado y las tentaciones mundanas
-Lam 3,40 Examinemos nuestros caminos, estudiémoslos y convirtámonos al Señor 
-o	El examen de conciencia
+	Lucha contra el pecado y las tentaciones mundanas<br>
+Lam 3,40 Examinemos nuestros caminos, estudiémoslos y convirtámonos al Señor <br>
+o	El examen de conciencia<br><br>
 
-	Inicio de la oración y el deseo de buscar a Dios
-o	Todo es Gracia
-Ef 2,8 Porque ustedes han sido salvados por su gracia, mediante la fe. Y esto no se debe a ustedes mismos, sino que es un don de Dios
+	Inicio de la oración y el deseo de buscar a Dios<br>
+o	Todo es Gracia<br>
+Ef 2,8 Porque ustedes han sido salvados por su gracia, mediante la fe. Y esto no se debe a ustedes mismos, sino que es un don de Dios<br>
 
-     </pre>
+     </p>
     </section>
     <!-- ***************************************************************************** -->
     
     <section id="MORADA2">
+      <h2>SEGUNDA MORADA</h2>
       LA TENTACIÓN<br>
     </section>
     <!-- ***************************************************************************** -->
