--- a/oracion/CastilloInterior.html
+++ b/oracion/CastilloInterior.html
@@ -189,7 +189,49 @@ Ef 2,8 Porque ustedes han sido salvados por su gracia, mediante la fe. Y esto no
     
     <section id="MORADA2">
       <h2>SEGUNDA MORADA</h2>
-      LA TENTACIÓN<br>
+      LA TENTACIÓN: El enemigo nos dará 100 verdades si con eso nos puede hacer creer una sola mentira<br>
+      <p>
+La humildad y la pobreza son las dos caras de la verdad. <br>
+“Altos muros son la pobreza” Sta. Clara de Asís.<br>
+“Los pobres verdaderos no hacen ruido”. Sta. Teresa de Jesús<br>
+“Cuando menos hay más confiada estoy” Sta. Teresa de Jesús<br><br>
+
+En búsqueda de la pobreza. La pobreza exterior como signo de la pobreza interior y esta como expresión de la absoluta confianza y amor de Dios y nuestra. La pobreza es el camino de la oración. Los ojos solo en el Señor. Honras y dinero van juntas, cuidémonos de las honras. La humildad expresa nuestra pobreza, Invita a amar al prójimo, a orar sin cesar, según la regla, a ayunar y a practicar el silencio, este silencio tendrá como meta estar en la paz del Señor.<br><br>
+Para escuchar debemos primero callar. La humildad implica hacer las cosas previo consejo. Y aconsejarse por personas instruidas y santas. Dice el Libro que en la multitud de consejos está el éxito. Sir 40:25  El oro y la plata aseguran tus pasos, pero un buen consejo es más eficaz que ambos. <br><br>
+La humildad esta en despojarse de todo para quedarse solo con el Señor. “Lo que tiene fin no es importante” preocupémonos por lo duradero.
+Aceptemos los agravios, sobre todo los sin razón; pues Cristo fue agraviado sin ella, ayudemos con su cruz. <br><br>
+No pequemos contra el Señor desviando a alguien de su vocación, hacerlo es querer que no se haga su Voluntad, sino la nuestra. <br><br>
+Las pequeñas victorias, las que nadie ve, son las que nos preparan para la obra del Señor. También cuando nos calumnien estemos en paz, pues siempre tendremos culpas, aunque no sean las que nos achacan, ayudemos con Su cruz. Solamente nuestra vista puesta en él, en su misión salvadora. Desde allí, retornemos y con amor ayudemos a la verdad, el bien para la salvación. <br><br>
+Se recomienda vivir en la humildad, conocerla, estudiarla, verla dentro del todo, y la parte.<br><br>
+La humildad se reconoce en la ausencia de prejuicios, pre conceptos, en una sincera apertura. Sin humildad no hay oración. Es una actitud que como todas se cultiva todo el día, en cada acto, hasta que sea parte de mi manera de ser. <br><br>
+Las tareas difíciles el Señor las reserva para sus amigos, a quien él prepara, envía y lo crucifican.<br><br>
+LA HUMILDAD<br>
+El que ama y vive en la verdad es humilde. Y como la verdad es un desarrollo permanente, la humildad será también un camino permanente. La perfección del hombre está en su ser perfectible, y la señal de esto es nuestro error en nuestro pensar y hacer. <br><br>
+Por eso nos reconocemos pecadores, siempre necesitados del Señor. Siempre dispuestos a aprender, a cambiar, a amar más y mejor.<br>
+La humildad implica conocernos, y nos conocemos cuando conocemos a Cristo. Y esto bajo la moción del Espíritu Santo. <br><br>
+Sin humildad es imposible el conocimiento, la conversión verdadera tampoco.
+Nos sabemos perdonados, por eso comprendemos y perdonamos. Tratamos de ayudar, callamos y hablamos para edificar. <br>
+La tarea aquí es aprender a aprender. Conocernos y vivir en la verdad que la pobreza. La pobreza es la condición indispensable para conocer, y ser humilde.<br><br>
+1.	LA PERSEVERANCIA<br><br>
+Ninguna virtud da fruto sin la perseverancia, que es animada por la esperanza, la mueve el amor y la guía la fe. Sin un mínimo de estas virtudes no podremos ser perseverantes.<br>
+En la fe hacemos camino, mejor aún, continuamos el camino que otros han comenzado, adaptándolo para nuestro hoy y preparándolo para el mañana, donde otros a su vez lo editaran. <br><br>
+La perseverancia es acompañada por la paciencia, es la gracia donde Dios nos indica el camino, lo que debemos cambiar, tanto en nosotros como en la realidad. Es vital la escucha atenta del Señor. Solo quien ama persevera y espera contra toda esperanza, lo quía el conocimiento de la realidad y de Dios, está abierto al misterio, al milagro a lo imprevisto.<br><br>
+
+2.	APRENDER A AMAR <br>
+Practicar la obediencia como medio para hacer la Voluntad de Dios. Sino obedecemos a los hermanos jamás podremos obedecer a Dios. <br>
+Toda tentación es vencida por el amor, todo momento de desolación nos invita a amar. Por eso dirá Sta. Teresa, lo que más los mueva a amar eso hemos de hacer- siempre la desolación es la gracia del llamado a amar más y mejor.<br><br>
+Solo seremos felices si hacemos lo que amamos, y estamos con quien amamos. 
+El signo del amor es la alegría, la gratitud y la gratuidad.<br>
+
+
+
+
+
+
+El enemigo nos dará cien verdades si nos puede hacer creer una sola mentira. 
+
+
+      </p>
     </section>
     <!-- ***************************************************************************** -->
     
