--- a/oracion/compendioOracion.html
+++ b/oracion/compendioOracion.html
@@ -116,8 +116,24 @@ La perseverancia en cada situación, nos hará comprender poco a poco el misteri
 <H3>ORACIÓN MENTAL</H3>
 De la oración vocal a la oración interior o mental, la llama también de recogimiento porque recoge las potencias del alma dentro de la persona<br>No centrarse en la persona, sino en Dios que está en cada uno de nosotros<br>
 La oración de recogimiento será corta, despacio, y haciendo pausas. Ella llama a este paso el fundamento de la oración. Y será lo suficientemente prolongada hasta descubrir los indicadores que ya se puede pasar al siguiente paso. Siempre tendremos oración vocal, también oración mental, de recogimiento o interior<br>
+En la vida de cada día observar ¿Qué me muestra el Señor del Señor?; siempre tendremos el premio antes de la batalla, se trata de no perderlo en ella.<br><br>
+LA ORACIÓN MENTAL <br>
+a.	El Señor viene a nuestro encuentro<br>
+Dios nos invita a empezar el camino de configurarnos con él. Lo haremos tratando de pensar como él, sentir como él, actuar como él, queriendo lo que él quiere. A esto llamaremos La Voluntad de Dios. Intentar hacer la Voluntad de Dios en todo nos configura con él. <br><br>
+b.	 aceptando la Gracia. <br>
+La gracia que se nos ofrece aquí es la humildad. Que no dirá que hemos empezado un camino, que estamos en un proceso, y que podemos estar equivocados. La absoluta certeza puede indicar eso.<br><br>
+La humildad es vivir en la verdad. Aprendamos a amarla y conocerla. Para realizar la voluntad de Dios es primero preciso conocerla, hemos de tener fe, en lo que nos enseña la iglesia y en lo que nos susurra el Espíritu. <br><br>
+c.	Los obstáculos <br>
+El mayor será en este momento la soberbia,  que no es otra cosa la manera que tiene el malo de engañarnos. Espera que creamos que ya lo sabemos todo, ya lo conseguimos, su objetivo es detenernos primero, luego desviarnos. Es el momento de recordar que vamos al Padre, en el Hijo por acción del Espíritu Santo. Vamos a Dios, en Dios guiados por Dios mismo.<br><br>
+La imaginación y la memoria dificultan el camino; porque nos induce a juzgar desde los propios conceptos. La invitación necesaria es a empezar a conformar mis pensamientos y sentimientos con el Señor.<br><br>
+
+d.	El fruto<br>
+No solo llevamos la cruz con alegría, amamos a quien en ella está. El camino es el amor. Vivir amando al Señor, en el Señor a todos y en cada uno al Señor.<br><br>
+La necesidad de conocer al Señor es cada vez mayor, sin desesperación pero con pasión, es la cruz abrazada y elevada. Es abandonarnos a Dios confiadamente <br><br>
+
+
 <H3>ORACIÓN DE CONTEMPLACIÓN</H3>
-La oración de contemplación llamada por ella oración de quietud, está unida a los otros tipos de oración, los tipos de oración no están separados, pues a veces están unidos y en otras se pasa de una a otra. Es un proceso gráfico que se usa para comprender mejor. 
+La oración de contemplación llamada por ella oración de unión, está unida a los otros tipos de oración, los tipos de oración no están separados, pues a veces están unidos y en otras se pasa de una a otra. Es un proceso gráfico que se usa para comprender mejor. 
 </p>
 
     </section>
