--- a/liturgia/misa.html
+++ b/liturgia/misa.html
@@ -86,7 +86,16 @@
      </section>
     <!-- ////////////////////////////////////////////////// -->
     <section id="entrada">
+      <h2>ENTRADA</h2>
+      <ol>
+        <li>Al ingresar tener presente ante Quien estamos</li>
+        <li>El silencio</li>
+        <li>Hacer un gesto de saludo</li>
+        <li>"Para que al nombre de Jesús toda rodilla se doble en los cielos, en la tierra y en los abismos" (Filipenses 2:10).</li>
+
+      </ol>
       <h2>RITOS INICIALES</h2>
+     
       <p>	La finalidad de estos actos es hacer que los fieles reunidos en la unidad construyan la comunión y se dispongan a escuchar la Palabra y a celebrar dignamente la Eucaristía. </p>
       <p>
         1.	ENTRADA <br>
@@ -105,11 +114,19 @@
             <li>Acorde al tiempo litúrgico o la celebración </li>
             <li>Aprobado por la conferencia episcopal</li>
             <li>Si no hay canto se lee la antífona  </li>
-            <li>1.	La finalidad del canto es abrir la celebración, promover la unidad e introducir en el misterio del tiempo litúrgico o Festividad, así como acompañar la procesión. MR 47 </li>
+            <li>La finalidad del canto es abrir la celebración, promover la unidad e introducir en el misterio del tiempo litúrgico o Festividad, así como acompañar la procesión. MR 47 </li>
+            <LI>La procesión simboliza el peregrinaje de la Iglesia hacia Dios. Los fieles, representados por el sacerdote y los ministros, se mueven hacia el altar, que es el símbolo de Cristo y del sacrificio eucarístico. Este movimiento refleja el camino de la vida cristiana, que es un viaje hacia la comunión plena con Dios.  </LI>
+            <li>La procesión es también un signo de la unidad de la comunidad de fieles que se reúne en torno a Cristo, representado por el altar. Los ministros y el sacerdote representan a todo el pueblo de Dios que avanza unido hacia el Señor.</li>
+            <li>La procesión también puede recordar la entrada triunfal de Jesús en Jerusalén, cuando fue recibido por la multitud con palmas y cánticos de alabanza.</li>
+            <li>‘¡Hosanna al Hijo de David! ¡Bendito el que viene en el nombre del Señor! ¡Hosanna en las alturas!’" (Mt 21,8-9).
+            </li>
+            <li>La palabra "Hosanna" proviene del hebreo הושענא (Hoshana o Hoshia-na), que significa literalmente "¡Sálvanos, por favor!" o "¡Sálvanos ahora!". Era una súplica dirigida a Dios pidiendo liberación o salvación.</li>
+            <li>En este contexto, "Hosanna" ya no solo es una súplica de salvación, sino también una exclamación de alabanza y reconocimiento de Jesús como el Mesías prometido, el Hijo de David, quien viene a salvar a su pueblo. Es una mezcla de súplica y júbilo, reconociendo que la salvación está cerca.</li>
+
 
           </ul>
         </li> <br>
-      
+
         <li>Saludo
           <ul>
             <li>	El Señor este con ustedes (DOMINUS VOBISCUM)	</li>
@@ -122,6 +139,8 @@
           <li>	Se reconocen los pecados 	</li>
           <li>Todos deben participar. Coro y pueblo.</li>
           <li>	Puede ser: Yo confieso, O El Señor ten piedad, este dicho por el sacerdote o cantado	</li>
+          <li>Mc 10, 46-52 Bartimeo </li>
+          <li>Este acto, bien hecho, nos absuelve de todos nuestros pecados veniales.</li>
         </ul>
         </li><br>
         <li>Gloria MR 53
@@ -173,6 +192,9 @@
           <li>Aclamación antes del Evangelio: El Aleluya (excepto en Cuaresma) se canta para aclamar la lectura del Evangelio.</li>
           <li>	Si no se canta se puede omitir	</li>
           <li>	Todos se ponen de pie, como gesto de respeto y disponibilidad	</li>
+          <li>La palabra "Aleluya" proviene del hebreo הללויה (Hallelu-Yah), que significa literalmente "¡Alabado sea Yahvé!" o "¡Alaben al Señor!". Se compone de dos partes: hallel (alabar) y Yah (una forma abreviada de Yahvé, el nombre de Dios en el Antiguo Testamento).</li>
+          <li>"Aleluya" aparece frecuentemente en los Salmos, particularmente en los llamados "Salmos Aleluya" (Salmos 113-118 y 146-150), donde se usa para iniciar o concluir los himnos de alabanza a Dios. Por ejemplo, en el Salmo 150:6: "¡Todo lo que respira, alabe al Señor! ¡Aleluya!".</li>
+          <li>"Después de esto oí como la voz de una gran multitud en el cielo, que decía: «¡Aleluya! La salvación, la gloria y el poder son de nuestro Dios, porque sus juicios son verdaderos y justos...»".Ap 19,1-6,</li>
         </ul>
       </li>
       <li>EVANGELIO
